# revforce-api

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose.yml  gitlab-ci.yml  package-lock.json  pyproject.toml  revforce-dc6aea7c7218.json
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 17d803ff1b36_change_chart_metric_from_chart_table_to_.py  7e8c8d2ed832_add_spend_column_to_ad_metrics.py  922255a06524_add_spend_column_to_ad_metrics.py
app/: main.py
app/config/: application.py  database.py
app/models/: __init__.py  account.py  account_config.py  ad.py  ad_metric.py  campaign.py  chart.py  chart_source.py  contact.py  deal.py  event.py  message.py  period.py  todos.py
app/repositories/: account.py  account_config.py  ad.py  ad_metric.py  campaign.py  chart.py  chart_source.py  contact.py  deal.py  event.py  message.py  period.py
app/routers/: account.py  account_config.py  activecampaign.py  ad.py  campaign.py  chart.py  chat.py  event.py  insights.py  refresh.py  todos.py
app/schemas/: account_config.py  accounts.py  activecampaign.py  chart.py  chat.py  event.py  refresh.py  todos.py
app/scripts/: script.py
app/services/: account_config.py  accounts.py  activecampaign_service.py  chart_data.py  charts.py  chat.py  crm.py  event.py  facebook.py  insights.py  openai.py  openai_module.py  (+2 more)
tests/: test_account_config_service.py  test_accounts_service.py  test_chart_data_service.py  test_charts_service.py  test_chat_service.py  test_insights_service.py  test_openai_service.py  test_refresh_service.py
(+1 files in other folders)
