[tool.poetry]
name = "revforce-api"
version = "0.1.0"
description = "Projeto baseado no requirements.txt fornecido"
authors = ["Seu Nome <seuemail@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
alembic = "^1.15.1"
annotated-types = "0.7.0"
anyio = "4.9.0"
asyncpg = "0.30.0"
click = "8.1.8"
fastapi = "0.115.11"
greenlet = "3.1.1"
h11 = "0.14.0"
httpx = "0.28.1"
idna = "3.10"
psycopg2-binary = "^2.9.0"
pydantic = "2.10.6"
pydantic-core = "2.27.2"
pydantic-settings = "2.8.1"
python = "^3.11"
sniffio = "1.3.1"
sqlalchemy = "2.0.39"
starlette = "0.46.1"
typing-extensions = "4.12.2"
uvicorn = "0.34.0"
facebook-business = "^22.0.5"
python-dateutil = "^2.9.0.post0"
openai = "^1.86.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
